--- a/app/src/main/res/layout/activity_three_smoker.xml
+++ b/app/src/main/res/layout/activity_three_smoker.xml
@@ -35,7 +35,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/smokerTextview"
                 android:layout_width="270dp"
                 android:layout_height="51dp"
                 android:layout_gravity="center"
@@ -47,7 +47,7 @@
                 android:textColor="@color/black"
                 android:textSize="24dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/textView5"
+                app:layout_constraintBottom_toTopOf="@+id/nonsmokerTextview"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
                 app:layout_constraintVertical_bias="0.726" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/nonsmokerTextview"
                 android:layout_width="270dp"
                 android:layout_height="51dp"
                 android:layout_gravity="center"
