--- a/app/src/main/res/layout/activity_two_field_of_study.xml
+++ b/app/src/main/res/layout/activity_two_field_of_study.xml
@@ -9,7 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:background="@color/saf"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,7 +48,7 @@
             android:layout_height="match_parent">
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/editTextStudyDetail"
                 android:layout_width="326dp"
                 android:layout_height="75dp"
                 android:ems="10"
@@ -56,7 +59,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.324" />
+
+            <TextView
+                android:id="@+id/study_submit_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Submit"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextStudyDetail" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
