--- a/app/src/main/res/layout/activity_two_field_of_study.xml
+++ b/app/src/main/res/layout/activity_two_field_of_study.xml
@@ -61,7 +61,7 @@
                 app:layout_constraintVertical_bias="0.324" />
 
             <TextView
-                android:id="@+id/submitBtn"
+                android:id="@+id/study_submit_btn"
                 android:layout_width="204dp"
                 android:layout_height="52dp"
                 android:layout_gravity="center"
