--- a/app/src/main/res/layout/row_content.xml
+++ b/app/src/main/res/layout/row_content.xml
@@ -17,6 +17,7 @@
         tools:layout_editor_absoluteY="17dp">
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="380dp"
             android:layout_height="670dp"
             android:orientation="vertical"
@@ -30,7 +31,7 @@
                 android:layout_width="393dp"
                 android:layout_height="570dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/img_5078__1_"
+                android:src="@drawable/tom2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="BHAVIN PARMAR"
+                android:text="t2om and jerry"
                 android:textColor="@color/black"
                 android:textSize="22dp"
                 android:textStyle="bold"
@@ -65,7 +66,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/NameOFUser" />
 
             <TextView
-                android:id="@+id/Location"
+                android:id="@+id/UserLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -88,13 +89,15 @@
             android:layout_height="44dp"
             android:background="@drawable/option_btn"
             android:gravity="center"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:text="i"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="28dp"
             android:textStyle="bold"
-            tools:layout_editor_absoluteX="314dp"
-            tools:layout_editor_absoluteY="623dp" />
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
